--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "paytm/testpaytm",
+  "name": "test/testpaytm",
   "description": "Test Library",
   "keywords": ["Test","Client","Test","PHP"],
   "authors": [
