--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "test/soumya",
+  "name": "vats/soumya",
   "description": "Soumya Library",
   "keywords": ["Client","soumya","PHP"],
   "authors": [
