--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,19 @@
 {
-  "name": "vats/soumya",
-  "description": "Soumya Library",
-  "keywords": ["Client","soumya","PHP"],
-  "authors": [
-    {
-      "name": "Soumya Vats",
-      "role": "Developer"
-    }
-  ],
-  "homepage": "https://developer.paytm.com/docs",
-  "require": {
-    "php": ">=5.6.0",
-    "ext-json": "*",
-    "ext-curl": "*",
-    "ext-openssl": "*",
-    "netresearch/jsonmapper": "^1.4",
-    "monolog/monolog": "^1.24"
-  }
+    "name": "vats/test_check_php",
+    "description": "this is a test check",
+    "type": "library",
+    "require": {
+        "ext-json": "*",
+        "php": ">=5.6.0",
+        "ext-curl": "*",
+        "ext-openssl": "*",
+        "netresearch/jsonmapper": "^1.4",
+        "monolog/monolog": "^1.24"
+    },
+ "autoload": {
+        "psr-4": {"vats\\HelloWorld\\": "checksum_v2/"}
+    },
+    "license": "MIT",
+    "minimum-stability": "stable"
+
 }
