--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "psr-4": {"vats\\check\\": "checksum_v2/"}
     },
     "license": "MIT",
-    "minimum-stability": "stable"
+    "minimum-stability": "dev"
 
 }
 
