--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
  "autoload": {
         "psr-4": {"vats\\check\\": "checksum_v2/"}
     },
-    "license": "MIT",
-    "minimum-stability": "dev"
+    "license": "MIT"
 
 }
 
