--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
  "autoload": {
         "psr-4": {"vats\\check\\": "checksum_v2/"}
     },
-    "license": "MIT"
+    "license": "MIT",
+    "minimum-stability": "dev"
 
 }
 
