--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "psr-4": {"vats\\check\\": "checksum_v2/"}
     },
     "license": "MIT",
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "prefer-stable" : true
 
 }
 
