--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "vats/test_check_php",
     "description": "this is a test check",
-    "type": "library",
     "require": {
         "ext-json": "*",
         "php": ">=5.6.0",
@@ -11,11 +10,8 @@
         "monolog/monolog": "^1.24"
     },
  "autoload": {
-        "psr-4": {"vats\\check\\": "/"}
+        "psr-4": {"vats\\check\\": "paytmchecksum/"}
     },
-    "license": "MIT",
-    "minimum-stability": "dev",
-    "prefer-stable" : true
-
+    "license": "MIT"
 }
 
